kubernetes/fluentbit-deamonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: kube-system
  labels:
    app: fluent-bit
spec:
  selector:
    matchLabels:
      app: fluent-bit
  template:
    metadata:
      labels:
        app: fluent-bit
    spec:
      containers:
        - name: fluent-bit
          image: fluent/fluent-bit:latest
          volumeMounts:
            - name: config-volume
              mountPath: /fluent-bit/etc
            - name: varlog
              mountPath: /var/log
            - name: fluent-bit-storage
              mountPath: /fluent-bit/storage
      volumes:
        - name: config-volume
          configMap:
            name: fluent-bit-config
        - name: varlog
          hostPath:
            path: /var/log
        - name: fluent-bit-storage
          emptyDir: {}
