kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: frontend-server
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  type: NodePort
  selector:
    io.kompose.service: server
